--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -6,4 +6,4 @@ host    all             all             ::1/128                 scram-sha-256
 host    all             all             localhost               scram-sha-256
 # replication specifically requires an entry but with 'replication' instead of a database name
 local   replication     all                                     scram-sha-256
-local   all             root                                    peer            localmap
+local   all             root                                    peer            map=localmap
