--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -1,4 +1,6 @@
 # TYPE  DATABASE        USER            ADDRESS                 METHOD         OPTIONS
+# allow local postgres user to connect without authentication. should be top row.
+local   all             postgres                                trust
 # accept connections from the local machine requiring encrypted passwords
 local   all             all                                     scram-sha-256
 host    all             all             127.0.0.1/24            scram-sha-256
